--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Step Bar Style Demo</title>
-    <link rel="stylesheet" href="../dist/css/step-bar.min.css">
+    <link rel="stylesheet" href="../dist/css/step-bar.css">
+    <!-- <link rel="stylesheet" href="../dist/css/step-bar.min.css"> -->
 </head>
 
 <body>
@@ -59,7 +60,7 @@
         </ul>
     </div>
 
-    <div>
+    <!-- <div>
         <h4>バーの色も変わるタイプ</h4>
         <ul class="step-bar">
             <li class="step is-active">
@@ -71,6 +72,30 @@
                 <p class="step__text">本人確認</p>
             </li>
             <li class="step is-active-bar">
+                <span class="step__title">お支払方法</span>
+            </li>
+            <li class="step">
+                <span class="step__title">購入確認</span>
+            </li>
+            <li class="step">
+                <span class="step__title">完了</span>
+                <p class="step__text">ありがとうございます</p>
+            </li>
+        </ul>
+    </div> -->
+
+    <div>
+        <h4>バーの色も変わるタイプ</h4>
+        <ul class="step-bar is-progress">
+            <li class="step">
+                <span class="step__title">カート</span>
+                <p class="step__text">商品確認</p>
+            </li>
+            <li class="step">
+                <span class="step__title">ログイン</span>
+                <p class="step__text">本人確認</p>
+            </li>
+            <li class="step is-active">
                 <span class="step__title">お支払方法</span>
             </li>
             <li class="step">
