demoを英語に変更 package-lock.jsonのパッケージ名をteb-step-barに変更

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,104 +11,107 @@
 </head>
 
 <body>
-    <h2>使用例</h2>
+    <h2>How to use</h2>
     <div>
-        <h4>タイトルが上にあるタイプ</h4>
+        <h4>Title is above number</h4>
         <ul class="step-bar">
             <li class="step">
-                <span class="step__title">カート</span>
-                <p class="step__text">商品確認</p>
+                <span class="step__title">Cart</span>
+                <p class="step__text">Confirm items</p>
             </li>
             <li class="step is-active">
-                <span class="step__title">ログイン</span>
-                <p class="step__text">本人確認</p>
+                <span class="step__title">Log in</span>
+                <p class="step__text">Identification</p>
             </li>
             <li class="step">
-                <span class="step__title">お支払方法</span>
+                <span class="step__title">Payment</span>
             </li>
             <li class="step">
-                <span class="step__title">購入確認</span>
+                <span class="step__title">Purchase</span>
             </li>
             <li class="step">
-                <span class="step__title">完了</span>
-                <p class="step__text">ありがとうございます</p>
+                <span class="step__title">Complete</span>
+                <p class="step__text">Thank you!</p>
             </li>
         </ul>
     </div>
 
     <div>
-        <h4>タイトルが下にあるタイプ</h4>
+        <h4>Title is under number</h4>
         <ul class="step-bar is-title-bottom">
             <li class="step">
-                <span class="step__title">カート</span>
-                <p class="step__text">商品確認</p>
+                <span class="step__title">Cart</span>
+                <p class="step__text">Confirm items</p>
             </li>
             <li class="step is-active">
-                <span class="step__title">ログイン</span>
-                <p class="step__text">本人確認</p>
+                <span class="step__title">Log in</span>
+                <p class="step__text">Identification</p>
             </li>
             <li class="step">
-                <span class="step__title">お支払方法</span>
+                <span class="step__title">Payment</span>
             </li>
             <li class="step">
-                <span class="step__title">購入確認</span>
+                <span class="step__title">Purchase</span>
             </li>
             <li class="step">
-                <span class="step__title">完了</span>
-                <p class="step__text">ありがとうございます</p>
+                <span class="step__title">Complete</span>
+                <p class="step__text">Thank you!</p>
             </li>
         </ul>
     </div>
 
     <!-- <div>
-        <h4>バーの色も変わるタイプ</h4>
+        <h4>The color of the bar also changes</h4>
         <ul class="step-bar">
             <li class="step is-active">
-                <span class="step__title">カート</span>
-                <p class="step__text">商品確認</p>
+                <span class="step__title">Cart</span>
+                <p class="step__text">Confirm items</p>
             </li>
             <li class="step is-active-bar">
-                <span class="step__title">ログイン</span>
-                <p class="step__text">本人確認</p>
+                <span class="step__title">Log in</span>
+                <p class="step__text">Identification</p>
             </li>
             <li class="step is-active-bar">
-                <span class="step__title">お支払方法</span>
+                <span class="step__title">Payment</span>
             </li>
             <li class="step">
-                <span class="step__title">購入確認</span>
+                <span class="step__title">Purchase</span>
             </li>
             <li class="step">
-                <span class="step__title">完了</span>
-                <p class="step__text">ありがとうございます</p>
+                <span class="step__title">Complete</span>
+                <p class="step__text">Thank you!</p>
             </li>
         </ul>
     </div> -->
 
     <div>
-        <h4>バーの色も変わるタイプ</h4>
+        <h4>The color of the bar also changes</h4>
         <ul class="step-bar is-progress">
             <li class="step">
-                <span class="step__title">カート</span>
-                <p class="step__text">商品確認</p>
+                <span class="step__title">Cart</span>
+                <p class="step__text">Confirm items</p>
             </li>
             <li class="step">
-                <span class="step__title">ログイン</span>
-                <p class="step__text">本人確認</p>
+                <span class="step__title">Log in</span>
+                <p class="step__text">Identification</p>
             </li>
             <li class="step is-active">
-                <span class="step__title">お支払方法</span>
+                <span class="step__title">Payment</span>
             </li>
             <li class="step">
-                <span class="step__title">購入確認</span>
+                <span class="step__title">Purchase</span>
             </li>
             <li class="step">
-                <span class="step__title">完了</span>
-                <p class="step__text">ありがとうございます</p>
+                <span class="step__title">Complete</span>
+                <p class="step__text">Thank you!</p>
             </li>
         </ul>
     </div>
 
-    <p>_variables.scss の変数を上書きしてカスタマイズすれば、ボーダーを出したり塗りを変えることも可能。README参照。</p>
+    <p>
+        By overriding the _variables.scss variable and customizing it, <wbr>
+        it is also possible to change the paint or border.
+    </p>
 </body>
 
 </html>
